Update duration when demuxed packets exceed known duration.

This applies a similar algorithm to what MSE does, if we see a packet
greater than the current duration or the duration is unknown, notify
Blink of the updated duration.

This prevents us from ending playback earlier on clips which report
incorrect durations; specifically those which report 0.1s or similar.

The UX experience is not great when this occurs, but is similar to what
happens in other browsers. The timeline will increasingly fall behind
as more content is demuxed and seeking is hard to accomplish.

BUG=645998, 656599
TEST=updated test expectations.

Review-Url: https://codereview.chromium.org/2645953004
Cr-Commit-Position: refs/heads/master@{#446889}

Former-commit-id: 560640b659f688387d4c239e00f2dc941607e9f0